# clearmind

./: .gitignore  .prettierignore  DEPLOY.md  NOTES.md  README.md  SESSION-NOTES.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  release.yml
clearmind/: package.json
clearmind/src/: index.css
cli/: autostart.js  cli.js  icon.js  menu.js  notifications.js  open-browser.js  package.json  server.js  single-instance.js  storage.js  toast.ps1  tray.js  url-handler.js  url-scheme.js
functions/api/: link.js  sync.js
public/: manifest.webmanifest  sw.js
scripts/: gen-installer-art.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: accent-picker.tsx  accent-provider.tsx  calendar-view.tsx  cli-tray-hint.tsx  command-palette.tsx  confirm-dialog.tsx  date-time-picker.tsx  duplicate-banner.tsx  error-boundary.tsx  homework-dialog.tsx  language-picker.tsx  language-toggle.tsx  logo.tsx  mini-calendar.tsx  mode-toggle.tsx  quick-capture.tsx  tag-input.tsx  task-commands.tsx  task-dialog.tsx  theme-picker.tsx  theme-provider.tsx  timezone-picker.tsx  tip-banner.tsx  toast.tsx  voice-mic.tsx
src/hooks/: use-cli-health.ts  use-document-title.ts  use-media-query.ts  use-platform.ts  use-sheet-swipe-down.ts  use-swipe-nav.ts  use-tasks.tsx
src/lib/: audio-capture.ts  bookmarklet.ts  cli-bridge.ts  desktop-bridge.ts  error-log.ts  horizontal-wheel.ts  i18n.tsx  ics.ts  (+4 more)
(+52 files in other folders)
